skin/screen.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; }

*:focus { outline: 0; }

body { line-height: 1em; color: black; background: #fff; }

ol, ul { list-style: none; }

/* tables still need 'cellspacing="0"' in the markup
*/
table { border-collapse: separate; border-spacing: 0; vertical-align: middle; }

caption, th, td { text-align: left; font-weight: normal; vertical-align: middle; }

q, blockquote { quotes: "" ""; }
q:before, q:after, blockquote:before, blockquote:after { content: ""; }

blockquote p { border-left: 2px solid red; padding-left: 8px; margin-left: 21px; margin-right:21px; font-size:13px;}
img a { border: none; }

body { margin: 30px 0; font-family: "Helvetica", arial, sans-serif; font-size: 14px; line-height: 1.5em; color: #333333; }


h1, h2, h3, h4, h5, h6, p, blockquote, code, pre, div, form, table { vertical-align: baseline; }

.accessibility { display: none; visibility: visible; }

hr { height: 1px; width: auto; border: medium none; background: #CCCCCC; margin: 10px 0; }

em, i { font-style: italic; }

strong, b { font-weight: bold; }

h1, h2, h3, h4, h5, h6 { color: #101010; }

h1 { font-size: 30px; line-height: 1.5em; margin: 30px 0 14px 0; }

h2 { font-size: 24px; line-height: 1.5em; margin: 31px 0 7px; }

h3 { font-size: 18px; line-height: 1.5em; margin: 27px 0 20px 0; color: #EE3D40; }

p, ol, ul, dl { font-size: 14px; line-height: 1.5em; margin: 0 0 21px; }

ol, ul { margin: 0 0 12px 40px; padding: 0px; -moz-padding-start: 0px; }

ol { list-style-type: decimal; list-style-position: outside; }

ul { list-style-type: disc; list-style-position: outside; }

dl { margin: 0 0 12px 0; }
dl dt { font-weight: bold; }
dl dd { margin: 0 0 0 40px; padding: 0px; -moz-padding-start: 0px; }

pre, code { font-family: "Bitstream Vera Sans Mono", "Courier",monospace; }

pre { margin: 24px 0 30px -30px; padding: 6px 30px 7px; font-size: 12px; line-height: 20px; border: 1px solid #eee; background: #f9f9f9; color: #555; }


img { margin: 12px 0 12px; }

object, video { margin: 12px 0 12px; }

a { text-decoration: none; font-weight: bold; color: #EE3D40; }
a:hover { color: black; }

button { border: 1px solid #333; background: #ccc; }

#ribbon { position: absolute; top: 0; right: 0; }
#ribbon img { margin: 0; }

#wrapper { width: 750px; margin: 0 0 0 140px; padding: 0 0 60px 0; }
#wrapper #header { padding: 0 0 34px 180px; }
#wrapper #header h2 { margin: 56px 0 8px 0; line-height: 1.2em; font-size: 40px; font-weight: bold; font-family: Times, Georgia, sans-serif; }
#wrapper #header p { margin: 0; }
#wrapper #content .post { margin: 0 0 55px 0; border-top: 1px solid #ccc; padding: 1px 20px 0 180px; }
#wrapper #content .post .details { width: 170px; margin: 46px 0 0 -170px; float: left; }
#wrapper #content .post .details p { font-size: 16px; line-height: 1.3em; color: #AAA; margin: 0 0 21px 0; }
#wrapper #content .post .details img { border: 1px solid #333; }
#wrapper #content .block { padding: 0 0 0 180px; }

blockquote p { border-left: 2px solid red; padding-left: 8px;
margin-left: 21px; margin-right:21px; font-size:13px;}

